schema/tests/ui/repr_missing.stderr
error: Message_repr: missing #[repr(...)] attribute
 --> $DIR/repr_missing.rs:3:10
  |
3 | #[derive(Message_repr)]
  |          ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Message_repr` (in Nightly builds, run with -Z macro-backtrace for more info)
