schema/tests/ui/repr_missing.rs
use schemars::Message_repr;

#[derive(Message_repr)]
pub enum Enum {
    Unit,
}

fn main() {}
